use correct event

--- a/.github/workflows/rebuild_package.yaml
+++ b/.github/workflows/rebuild_package.yaml
@@ -2,7 +2,7 @@ name: rebuild package
 
 on:
   workflow_dispatch:
-    types: [new-commits]
+    types: [remote_trigger]
 
 jobs:
   rebuild-package:
