--- a/.github/workflows/rebuild_package.yaml
+++ b/.github/workflows/rebuild_package.yaml
@@ -2,7 +2,11 @@ name: rebuild package
 
 on:
   workflow_dispatch:
-    types: [remote_trigger]
+    inputs:
+      tag:
+        description: 'arbritrary tag'
+        required: true
+        type: string
 
 jobs:
   rebuild-package:
@@ -10,4 +14,7 @@ jobs:
     steps:
       - name: actually rebuild the package
         run: |
-          write-output "rebuilding package"
+          write-output "rebuilding package for tag: $TAG"
+	  echo "rebuilding package for tag: $TAG"
+        env:
+          TAG: ${{ inputs.tag }}
